# MarzbanClient

./: README.md  extra.py  generate.sh  generator-config.yaml  openapi.json  pyproject.toml  requirements.txt
marzban_client/api/admin/: admin_token.py  create_admin.py  get_admins.py  get_current_admin.py  modify_admin.py  remove_admin.py
marzban_client/api/core/: get_core_config.py  get_core_stats.py  modify_core_config.py  restart_core.py
marzban_client/api/node/: add_node.py  get_node.py  get_node_settings.py  get_nodes.py  get_usage.py  modify_node.py  reconnect_node.py  remove_node.py
marzban_client/api/subscription/: user_get_usage.py  user_subscription.py  user_subscription_info.py  user_subscription_with_client_type.py
marzban_client/api/system/: get_hosts.py  get_inbounds.py  get_system_stats.py  modify_hosts.py
marzban_client/api/user/: add_user.py  delete_expired_users.py  get_expired_users.py  get_user.py  get_user_usage.py  get_users.py  get_users_usage.py  modify_user.py  remove_user.py  reset_user_data_usage.py  reset_users_data_usage.py  revoke_user_subscription.py  set_owner.py
marzban_client/api/user_template/: add_user_template.py  get_user_templates.py
marzban_client/models/: __init__.py
models_templates/pydantic/: BaseModel.jinja2
templates/: endpoint_macros.py.jinja  endpoint_module.py.jinja
templates/property_templates/: model_property.py.jinja
