[project]
name = "marzban_client"
version = "0.7.0"
description = "A client library for accessing MarzbanAPI"
authors = []
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "httpx>=0.20.0,<0.28.0",
    "attrs>=21.3.0",
    "python-dateutil>=2.8.0",
]

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
